K8S havargas/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Despliegue-nginx
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: Almacenamiento-nginx
              mountPath: /usr/share/nginx/html # Persistir contenido web
      volumes:
       -service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
